# happyLock

./: .gitignore  CMakeLists.txt  README.md
backend/: CMakeLists.txt  session.cpp  session.h
backend/model/: CMakeLists.txt  Document.cpp  Document.h  DocumentRepository.cpp  DocumentRepository.h  Version.cpp  Version.h
backend/server/: CMakeLists.txt  main.cpp  server.cpp  server.h  session.cpp  session.h
backend/service/: CMakeLists.txt  CollaborationService.cpp  CollaborationService.h
frontend/: CMakeLists-qt6.txt  CMakeLists.txt  MainWindow.cpp  MainWindow.h  NetworkClient.cpp  NetworkClient.h  frontend.pro  main.cpp
